# python-template

./: README.md  compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
doc/: 環境構築手順.md
docker/: dockerfile
src/: sample.py
