[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["6ppng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-isort = "^6.0.0"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
